--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.yuanxj.helloandroid" >
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,6 +26,14 @@
         <activity
             android:name=".ListViewActivity"
             android:label="@string/title_activity_list_view" >
+        </activity>
+        <activity
+            android:name=".BroadcastReceiver0Activity"
+            android:label="@string/title_activity_broadcast_receiver0" >
+        </activity>
+        <activity
+            android:name=".ContentProvider0Activity"
+            android:label="@string/title_activity_content_provider0" >
         </activity>
     </application>
 
